# basic-midi-sequencer

./: .gitignore  Cargo.toml  README.md
filetests/: simple.input  simple.mid
filetests/test_output/: simple.mid
src/: main.rs
