[package]
name = "elektron-sequencer"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5"
ghakuf = "0.5"
num-integer = "0.1"
serde = "1.0"
ron = "0.6"
arraytools = "0.1"

[features]
nightly = []
